--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.1.5",
     "cloudinary": "^2.5.1",
     "firebase": "^10.14.0",
-    "next": "14.2.14",
+    "formidable": "^3.5.2",
+    "next": "^14.2.21",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
