--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "cloudinary": "^2.5.1",
     "firebase": "^10.14.0",
-    "formidable": "^3.5.2",
     "next": "^14.2.21",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18"
   },
