--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.14.0",
+    "firebase-admin": "^13.0.2",
     "next": "^14.2.21",
     "next-cloudinary": "^6.16.0",
     "react": "^18",
